# LinOSSM_Torch

./: M_inv.txt  pyproject.toml  test_damped_oscillator.py  test_solver.ipynb  train.py  train_scp1.py  train_worms.py  training.ipynb  training_ref.ipynb
lib/: LinOSS.py  dataset.py  layers.py  utils.py
models/: LinOSS_model.pth  fno_model.pth
