[project]
name = "linossm-torch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jax>=0.5.2",
    "jaxtyping>=0.2.38",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
]
